--- a/cart/configs/values_local.yaml
+++ b/cart/configs/values_local.yaml
@@ -1,5 +1,5 @@
 service:
-  host: localhost
+  host: 0.0.0.0
   port: 8080
   workers: 5
 
@@ -8,7 +8,7 @@ jaeger:
   port: 6831
 
 product_service:
-  host: localhost
+  host: http://products
   port: 8082
   token: testToken
   limit: 10
