--- a/cart/configs/values_local_docer.yaml
+++ b/cart/configs/values_local_docer.yaml
@@ -8,7 +8,7 @@ jaeger:
   port: 6831
 
 product_service:
-  host: http://localhost
+  host: http://products
   port: 8082
   token: testToken
   limit: 10
