[hw-2] Вторая попытка. Шаг 1

--- a/cart/Makefile
+++ b/cart/Makefile
@@ -12,8 +12,14 @@ run-all: bindir
 	echo "build cart"
 	docker-compose up --build
 
-test-all:
+.install-minimock:
+	go install github.com/gojuno/minimock/v3/cmd/minimock@v3.4.5
+
+test-all:.install-minimock
+	minimock -i ./internal/domain/service.CartsRepository -o ./internal/domain/service/mock/cart_repository_mock.go
+	minimock -i ./internal/domain/service.ProductService -o ./internal/domain/service/mock/product_service_mock.go
 	go test -cover ./internal/app/server ./internal/domain/repository/inmemoryrepository
+
 
 
 
