[hw-2] Третья попытка. Шаг 1

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -37,6 +37,8 @@ linters:
     - revive
     - typecheck
     - unused # will be used insted of varcheck + deadcode + structcheck. More info https://github.com/golangci/golangci-lint/issues/1841
+    - gocyclo
+    - gocognit
 
 issues:
   exclude-dirs:
