--- a/cart/Makefile
+++ b/cart/Makefile
@@ -22,6 +22,24 @@ gen-mock:
 test-all:
 	go test -cover ./internal/app/server ./internal/domain/repository/inmemoryrepository
 
+bench-all:
+	go test ./internal/domain/repository/inmemoryrepository -bench=.
 
+test-serv: run-all
+	export CONFIG_FILE=./cart/configs/values_local.yaml
+	rm ./testы/e2e/allure-results/*
+	go test ./tests/e2e
+
+allure-serve:
+	allure serve ./tests/e2e/allure-results
+
+.install-linters:
+	go install github.com/fzipp/gocyclo/cmd/gocyclo@latest
+	go install github.com/uudashr/gocognit/cmd/gocognit@latest
+
+lint:
+	gocyclo -top 10 -avg -ignore "mock" .
+	gocognit -top 10 -avg -ignore "mock" .
+	golangci-lint run
 
 
