[hw-3] Первая попытка. + Доработки в cart. В бизнесе есть ошибки.

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ cart/testsignore/sevice_test.go
 cart/testsignore/allure-results
 cart/tests/e2e/allure-results
 loms/vendor-proto
+cart/vendor-proto
