--- a/loms/Makefile
+++ b/loms/Makefile
@@ -24,7 +24,7 @@ gen-mock:
 	minimock -i ./internal/app/server.LomsServise -o ./internal/app/server/mock/loms_servise_mock.go
 
 test-all:
-	go test -cover ./internal/app/server
+	go test -cover ./internal/app/server ./internal/domain/service
 
 bin-deps:
 	GOBIN=$(BINDIR) go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28.1 && \
