[hw-3] Первая попытка. Шаг 4

--- a/cart/Makefile
+++ b/cart/Makefile
@@ -11,6 +11,10 @@ build: bindir
 	echo "build cart"
 	docker-compose up --build
 
+run:
+	export CONFIG_FILE=./cart/configs/values_local.yaml &&\
+	go run ./cart/cmd/server/main.go
+
 run-all: bindir
 	echo "build cart"
 	docker-compose up --build
