--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,6 @@ cart/testsignore
 cart/testsignore/sevice_test.go
 cart/testsignore/allure-results
 cart/tests/e2e/allure-results
+loms/tests/e2e/allure-results
 loms/vendor-proto
 cart/vendor-proto
