--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,24 +1,21 @@
 version: "1.0"
 
 services:
-  carts:
-    build: .
+  loms:
+    build: ./loms
+    ports:
+      - "8083:8083"
+      - "8084:8084"
+
+  cart:
+    build: ./cart
     ports:
       - "8080:8080"
     depends_on:
       - products
+      - loms
 
   products:
     image: gitlab-registry.ozon.dev/go/classroom-20/students/homework-draft/products:latest
     ports:
       - "8082:8082"
-
-  loms-grps:
-    build: .
-    ports:
-      - "8083:8083"
-
-  loms-http:
-    build: .
-    ports:
-      - "8084:8084"
