--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,8 @@
 version: "1.0"
 
 services:
-  loms:
-    build: ./loms
-    ports:
-      - "8083:8083"
-      - "8084:8084"
-
   cart:
+    image: cart
     build: ./cart
     ports:
       - "8080:8080"
@@ -19,3 +14,10 @@ services:
     image: gitlab-registry.ozon.dev/go/classroom-20/students/homework-draft/products:latest
     ports:
       - "8082:8082"
+
+  loms:
+    image: loms
+    build: ./loms
+    ports:
+      - "8083:8083"
+      - "8084:8084"
