[hw-3] Настройка докера

--- a/loms/configs/values_local.yaml
+++ b/loms/configs/values_local.yaml
@@ -8,21 +8,21 @@ jaeger:
   port: 6831
 
 db_master:
-  host: localhost
+  host: postgres-master
   port: 5432
   user: loms-user
   password: loms-password
   db_name: loms_db
 
 db_replica:
-  host: localhost
-  port: 5433
+  host: postgres-replica
+  port: 5432
   user: loms-user
   password: loms-password
   db_name: loms_db
 
 kafka:
-  host: localhost
+  host: kafka
   port: 29092
   order_topic: loms.order-events
-  brokers: localhost:9092
+  brokers: kafka:29092
