--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,3 +21,13 @@ services:
     ports:
       - "8083:8083"
       - "8084:8084"
+
+  postgres-master:
+    image: gitlab-registry.ozon.dev/go/classroom-20/students/base/postgres:16
+    container_name: postgres-master
+    environment:
+      - POSTGRESQL_USERNAME=loms-user
+      - POSTGRESQL_PASSWORD=loms-password
+      - POSTGRESQL_DATABASE=loms_db
+    ports:
+      - "5433:5432"
