--- a/loms/Makefile
+++ b/loms/Makefile
@@ -2,6 +2,9 @@ BINDIR=${CURDIR}/bin
 PACKAGE=route256/loms
 CONFIG_FILE=loms/configs/values_local.yaml
 
+MIGRATIONS_FOLDER := ./migrations/
+LOCAL_DB_DSN := postgresql://loms-user:loms-password@127.0.0.1:5433/loms_db?sslmode=disable
+
 PROTO_PATH := "./api"
 
 bindir:
@@ -35,7 +38,8 @@ bin-deps:
 	GOBIN=$(BINDIR) go install google.golang.org/grpc/cmd/protoc-gen-go-grpc@v1.2.0 && \
 	GOBIN=$(BINDIR) go install github.com/envoyproxy/protoc-gen-validate@v1.0.4 && \
 	GOBIN=$(BINDIR) go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-grpc-gateway@v2.19.1 && \
-    GOBIN=$(BINDIR) go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@v2.19.1
+    GOBIN=$(BINDIR) go install github.com/grpc-ecosystem/grpc-gateway/v2/protoc-gen-openapiv2@v2.19.1 && \
+    GOBIN=$(BINDIR) go install github.com/pressly/goose/v3/cmd/goose@v3.24.1
 
 vendor-rm:
 	rm -rf vendor-proto
@@ -95,4 +99,20 @@ protoc-generate:
 	api/loms.proto && \
 	go mod tidy
 
+install-goose:
+	$(info Installing goose binary into [$(LOCAL_BIN)]...)
+	GOBIN=$(BINDIR) go install github.com/pressly/goose/v3/cmd/goose@v3.24.1
 
+
+db-create-migration:
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) create -s $(n) add_loms_table sql
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) create -s $(n) init_loms_table sql
+
+db-migrate:
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) postgres "$(LOCAL_DB_DSN)" up
+
+db-migrate-down:
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) postgres "$(LOCAL_DB_DSN)" down
+
+db:
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) create -s $(n) NewSchema sql
