--- a/loms/Makefile
+++ b/loms/Makefile
@@ -2,6 +2,9 @@ BINDIR=${CURDIR}/bin
 PACKAGE=route256/loms
 CONFIG_FILE=loms/configs/values_local.yaml
 
+MIGRATIONS_FOLDER := ./migrations/
+LOCAL_DB_DSN := postgresql://loms-user:loms-password@127.0.0.1:5433/loms_db?sslmode=disable
+
 PROTO_PATH := "./api"
 
 bindir:
@@ -94,5 +97,20 @@ protoc-generate:
     --openapiv2_opt logtostderr=true \
 	api/loms.proto && \
 	go mod tidy
+
+install-goose:
+	GOBIN=$(BINDIR) go install github.com/pressly/goose/v3/cmd/goose@v3.24.1
+
+db-create-migration:
+	mkdir -p  migrations
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) create -s $(n) add_loms_table sql
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) create -s $(n) init_loms_table sql
+
+db-migrate:
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) postgres "$(LOCAL_DB_DSN)" up
+
+db-migrate-down:
+	$(BINDIR)/goose -dir $(MIGRATIONS_FOLDER) postgres "$(LOCAL_DB_DSN)" down
+
 
 
