[hw-4a] Успешно 3. Получил ответ из БД.

--- a/loms/configs/values_local.yaml
+++ b/loms/configs/values_local.yaml
@@ -8,8 +8,8 @@ jaeger:
   port: 6831
 
 db_master:
-  host: postgres-master
-  port: 5432
+  host: localhost
+  port: 5433
   user: loms-user
   password: loms-password
   db_name: loms_db
