[hw-4] hw-1 hw-3 hw-4 tests passed

--- a/cart/configs/values_ci.yaml
+++ b/cart/configs/values_ci.yaml
@@ -8,12 +8,13 @@ jaeger:
   port: 6831
 
 product_service:
-  host: product-service
+  host: http://product-service
   port: 8082
   token: testToken
   limit: 10
   burst: 10
 
 loms_service:
-  host: loms_service
+  host: localhost
   port: 8083
+
