--- a/cart/configs/values_ci.yaml
+++ b/cart/configs/values_ci.yaml
@@ -8,7 +8,7 @@ jaeger:
   port: 6831
 
 product_service:
-  host: product-service
+  host: http://product-service
   port: 8082
   token: testToken
   limit: 10
@@ -17,3 +17,4 @@ product_service:
 loms_service:
   host: localhost
   port: 8083
+
