[hw-5] Исправленная версия. Шаг 2. Ограничение 10 RPS на стороне клиента

--- a/cart/Makefile
+++ b/cart/Makefile
@@ -13,7 +13,7 @@ build: bindir
 
 run:
 	export CONFIG_FILE=./configs/values_local.yaml &&\
-	go run ./cmd/server/main.go
+	go run -race ./cmd/server/main.go
 
 run-all: bindir
 	echo "build cart"
