[hw-5] Исправленная рабочая версия. Шаг 6. Тесты проходят. Сервис работает, но долго.

--- a/cart/Makefile
+++ b/cart/Makefile
@@ -15,7 +15,7 @@ run:
 	export CONFIG_FILE=./configs/values_local.yaml &&\
 	go run -race ./cmd/server/main.go
 
-run-all: bindir
+run-all: bindircd
 	echo "build cart"
 	docker-compose up --build
 
