--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -54,6 +54,8 @@ services:
 
   prometheus:
     image: prom/prometheus:latest
+    depends_on:
+      - cart
     volumes:
       - ./prometheus/:/etc/prometheus/
       - prometheus_data:/prometheus
@@ -67,6 +69,8 @@ services:
 
   grafana:
     image: grafana/grafana:latest
+    depends_on:
+      - prometheus
     volumes:
       - ./grafana_data:/var/lib/grafana
     ports:
