--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -6,7 +6,7 @@ scrape_configs:
     static_configs:
       - targets: ['localhost:9090']
 
-  - job_name: 'app'
+  - job_name: 'cart-scrape'
     scrape_interval: 5s
     static_configs:
-      - targets: ['app:8080']
+      - targets: ['cart:8080']
