[Hw-6] Настроены метрики для входящих запросов в loms. Работает. Не заполняется label path для http запросов.

--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -10,3 +10,8 @@ scrape_configs:
     scrape_interval: 5s
     static_configs:
       - targets: ['cart:8080']
+
+  - job_name: 'loms-scrape'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['loms:8084']
