--- a/loms/configs/values_local.yaml
+++ b/loms/configs/values_local.yaml
@@ -22,7 +22,7 @@ db_replica:
   db_name: loms_db
 
 kafka:
-  host: kafka
+  host: localhost
   port: 29092
   order_topic: loms.order-events
-  brokers: kafka:29092
+  brokers: localhost:9092
