[Hw-7] Реализован сервис notifier в сыром виде. Читает сообщения из kafka и выводит их как есть в лог.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -31,6 +31,14 @@ services:
         condition:
           service_started
 
+  notifier:
+    image: notifier
+    build: ./notifier
+    depends_on:
+      kafka:
+        condition:
+          service_started
+
   postgres-master:
     image: postgresmasterloms:latest
     container_name: postgresmaster
