[Hw-7] Основное + доп задание готовый.

--- a/loms/Makefile
+++ b/loms/Makefile
@@ -38,7 +38,7 @@ gen-mock:
 	minimock -i ./internal/domain/service/outbox.PgPooler -o ./internal/domain/service/outbox/mock/pg_pooler_mock.go
 
 test-all:
-	go test -cover ./internal/app/server ./internal/domain/service/loms ./internal/domain/service/outbox
+	go test -race -cover ./internal/app/server ./internal/domain/service/loms ./internal/domain/service/outbox
 
 bin-deps:
 	GOBIN=$(BINDIR) go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.27.1 && \
