[Hw-7] Основное + доп задание готовый. Toxiproxy  необходимый для тестов, добавлен в основной docker-compose.yaml

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -146,3 +146,8 @@ services:
       KAFKA_CLUSTERS_0_NAME: local
       KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka:29092
       DYNAMIC_CONFIG_ENABLED: "true"
+
+  toxiproxy:
+    image: ghcr.io/shopify/toxiproxy:2.11.0
+    ports:
+      - "8474:8474"
